# projetmap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
codemap/: __main__.py  cli.py  server.py
codemap/analyzers/: __init__.py  config_scanner.py  convention_detector.py  entry_detector.py  test_scanner.py
codemap/behavioral/: SCHEMA.md  __init__.py  call_graph.py  state_flow.py
codemap/behavioral/extractors/: __init__.py
codemap/behavioral/extractors/dart/: dart_behavioral_extractor.dart  pubspec.yaml
codemap/core/: analyzers.py  cache.py  community.py  graph_builder.py  utils.py
codemap/exporters/: html_exporter.py  json_exporter.py  mermaid_exporter.py  report_exporter.py
codemap/extractors/: __init__.py  base.py  config_parser.py  dart.py  generic.py  js_ts.py  python.py
codemap/instructions/: __init__.py  chunker.py  classifier.py  instruction_graph.py  overlap_detector.py  prompt_extractor.py
projetmap/: __init__.py  __main__.py  cli.py  server.py
projetmap/analyzers/: __init__.py  config_scanner.py  convention_detector.py  entry_detector.py  test_scanner.py
projetmap/behavioral/: __init__.py  call_graph.py  state_flow.py
projetmap/behavioral/extractors/: __init__.py
projetmap/core/: analyzers.py  cache.py  community.py  graph_builder.py  utils.py
projetmap/exporters/: html_exporter.py  json_exporter.py  mermaid_exporter.py  report_exporter.py
projetmap/extractors/: __init__.py  base.py  config_parser.py  dart.py  generic.py  js_ts.py  python.py
projetmap/instructions/: __init__.py  chunker.py  classifier.py  instruction_graph.py  overlap_detector.py  prompt_extractor.py
projetmap/journeys/: __init__.py  classifier.py  detector.py  html_export.py  models.py  report.py
projetmap/skill/: README.md  SKILL.md  install.sh
tests/: test_cli.py
tests/test_core/: test_cache.py  test_graph_builder.py
tests/test_exporters/: test_json_exporter.py
tests/test_extractors/: test_structural.py
tests/test_journeys/: __init__.py  test_detector.py  test_integration.py
