[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projetmap"
version = "1.0.1"
description = "Knowledge graph generator for codebases — scan, analyze, and understand any project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Akinseye Akin-Oyewole"}
]
keywords = ["codebase", "knowledge-graph", "static-analysis", "dead-code", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "leidenalg>=0.10.0",
    "mcp>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "pytest-cov>=5.0",
]

[project.scripts]
projetmap = "projetmap.cli:main"

[project.urls]
Homepage = "https://github.com/360integree/projetmap"
Repository = "https://github.com/360integree/projetmap"
Issues = "https://github.com/360integree/projetmap/issues"

[tool.setuptools.packages.find]
include = ["projetmap*"]

[tool.setuptools.package-data]
projetmap = ["skill/*", "skill/bin/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",    # line length handled by formatter
    "N803",    # argument name 'G' should be lowercase — NetworkX convention
    "N806",    # variable 'G' in function should be lowercase — NetworkX convention
]

[tool.ruff.lint.isort]
known-first-party = ["projetmap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
